# restapi_example

./: .gitignore  Model.mwb  Model.mwb.bak  README.md  env_example
.github/workflows/: setup_test.yml  workflow_test.yml
backend/: app.js  database.js  package-lock.json  package.json
backend/models/: grade_model.js  student_model.js
backend/public/: index.html
backend/routes/: grade.js  login.js  student.js
bank_db_test/: CMakeLists.txt  basepage.cpp  basepage.h  basepage.ui  environment.cpp  environment.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
frontend/: CMakeLists.txt  environment.cpp  environment.h  frontend.iss  grades.cpp  grades.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mydata.cpp  mydata.h  mydata.ui  mygrades.cpp  mygrades.h  mygrades.ui  studentinfo.cpp  studentinfo.h  studentinfo.ui
frontend/restapi_example/: CMakeLists.txt
peppi/: CMakeLists.txt
